--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -1,3 +1,40 @@
-// Place all the styles related to the sites controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.title{
+  border-bottom: 2px dashed black;
+  font-size: 24pt;
+}
+
+.title_site{
+  border-bottom: 2px dashed black;
+  font-size: 20pt;
+  margin-left: 50px;
+}
+
+.main_content_site {
+  font-size: 16pt;
+}
+
+.label_name_spec_site {
+  background-color: white;
+  color: black;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 30px;
+  width: 100%
+}
+
+.name_spec_site {
+  border: none;
+  background-color: white;
+  font-size: 16pt;
+  margin-left: 30px;
+}
+
+.val_spec_site {
+  color:red;
+  display: inline-block;
+}
+
+label {
+    cursor: pointer;
+    display:block;
+}
