--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -10,6 +10,7 @@
 <% end %>
   <% @sites.each do |site| %>
 <div class="main_content_site">
+  <%= site.id %>
   <div class="title_site"><%= site.name.capitalize %> </div>
   <div class="name_spec_site">Site stats is active: <%= site.active %></div>
   <div class="name_spec_site">URL: <%= site.url %></div>
