--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,11 +2,11 @@
 
 <div class="title">Pages</div>
 
-<%= link_to 'New Page', new_page_path %>
+<%= link_to 'New Page', new_site_page_path %>
 <% if params[:all] == 'true' %>
-<%= link_to 'Show active pages', pages_path(all: false) %>
+<%= link_to 'Show active pages', site_pages_path(all: false, site_id: params[:site_id]) %>
 <% else %>
-<%= link_to 'Show all pages', pages_path(all: true) %>
+<%= link_to 'Show all pages', site_pages_path(all: true), site_id: params[:site_id] %>
 <% end %>
   <% @pages.each do |page| %>
 <div class="main_content_page">
@@ -16,8 +16,8 @@
   <div class="name_spec_page">Email: <%= page.email %></div>
   <div class="name_spec_page">Basic authentification login: <%= page.basic_auth %></div>
   <div class="name_spec_page">Basic authentification password: <%= page.basic_password %></div>
-    <%= link_to 'Edit', edit_page_path(page) %>
-    <%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to 'Edit', edit_site_page_path(page.site, page) %>
+  <%= link_to 'Destroy', [page.site, page], method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
     <% end %>
 <br>
