--- a/app/assets/stylesheets/page.css
+++ b/app/assets/stylesheets/page.css
@@ -1,25 +1,36 @@
 .title{
   border-bottom: 2px dashed black;
   font-size: 24pt;
+  margin-top: 25px;
+  margin-left: 25px;
 }
 
-.title_page{
+.action {
+  margin-left: 25px;
+}
+
+.title_page {
   border-bottom: 2px dashed black;
   font-size: 20pt;
   margin-left: 50px;
 }
 
-.main_content_page {
-  font-size: 16pt;
+.title_site {
+ border-bottom: 2px dashed black;
+ font-size: 20pt;
+ margin-left: 50px;
 }
 
-.label_name_spec_page {
-  background-color: white;
-  color: black;
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-left: 30px;
-  width: 100%
+.main_content_page {
+  font-size: 16pt;
+  margin-bottom: 25px;
+  margin-top: 25px;
+}
+
+.main_content_site {
+  font-size: 16pt;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 .name_spec_page {
@@ -29,12 +40,17 @@
   margin-left: 30px;
 }
 
-.val_spec_page {
-  color:red;
+.field {
+  margin-left: 50px;
   display: inline-block;
 }
 
-label {
-    cursor: pointer;
-    display:block;
+.new {
+  margin-top: 25px;
+  margin-left: 25px;
+}
+
+.actions {
+  margin-top: 25px;
+  margin-left: 25px;
 }
