--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,17 @@
  *= require_self
  *= require brunch/app
  */
+
+// Fix FontAwesome
+@font-face {
+    font-family: 'FontAwesome2';
+    src: font-url("fontawesome-webfont.woff2") format('woff2'),
+         font-url("fontawesome-webfont.woff") format("woff"),
+         font-url("fontawesome-webfont.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class*='uk-icon-'] {
+    font-family: 'FontAwesome2' !important;
+}
