--- a/app/views/admin/accounts/new.html.erb
+++ b/app/views/admin/accounts/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Accounts#new</h1>
-<p>Find me in app/views/admin/accounts/new.html.erb</p>
+<h1 class="new">
+<%= link_to 'Back', admin_accounts_path %><br />
+New account</h1>
+
+<%= @user %>
+<%= render 'form_add', user: @user %>
