--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,8 +12,9 @@ html
         li= link_to 'Sites', root_path
       uk.uk-navbar-nav.uk-navbar-flip
         li= link_to 'My account', edit_user_registration_path
+        - if @is_an_admin == true
+          li= link_to 'Manage account', admin_accounts_path
         li= link_to 'Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }
-
     .uk-container.uk-container-center
       - if notice
         p.uk-alert= notice
