--- a/app/views/admin/accounts/index.html.erb
+++ b/app/views/admin/accounts/index.html.erb
@@ -10,7 +10,7 @@
   <div class="name_spec_users">User admin: <%= user.admin %></div>
   <div class="name_spec_page"><%= link_to 'Show', admin_account_path(user) %>
   <%= link_to 'Edit', edit_admin_account_path(user) %>
-  <%= link_to 'Destroy', admin_account_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></div>
+  <%= link_to 'Destroy', admin_account_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></div><br />
 </div>
     <% end %>
 <br>
