--- a/app/views/sites/show.html.slim
+++ b/app/views/sites/show.html.slim
@@ -4,4 +4,4 @@ ul.uk-list.uk-list-space
   li.uk-list Active: #{@site.active}
   li.uk-list Name: #{@site.name}
   li.uk-list Url: #{@site.url}
-- button_to 'Back to dashboard', root_path, :class => 'uk-button'
+- link_to 'Back to dashboard', root_path, :class => 'uk-button'
