--- a/app/views/admin/accounts/_form.html.slim
+++ b/app/views/admin/accounts/_form.html.slim
@@ -12,6 +12,12 @@ div.uk-form-large
       = f.label :password, "Password: "
       = f.password_field :password, autofocus: true, autocomplete: "off"
     br
+    div.uk-form-large
+      = user.unlock_access!
+      / - if user.unlock_token
+      = f.label :unlock_access!, "Unlock access: "
+      = f.check_box :unlock_access!
+    br
     div.actions.uk-form-large
       = link_to 'Back', admin_accounts_path, :class => "uk-button"
       = f.submit :class => "uk-button"
