--- a/app/brunch/application.scss
+++ b/app/brunch/application.scss
@@ -1,3 +1,25 @@
+$button-tidy-menu-color: white;
+$button-tidy-menu-bacgroung-color: #2773A5;
+$button-tidy-menu-hover-background: #4997CA;
+$button-tidy-menu-hover-color: white;
+
 @import "uikit/dist/scss/uikit-mixins";
 @import "uikit/dist/scss/uikit-variables";
+
+.uk-button {
+  border-radius: 5px;
+}
+
 @import "uikit/dist/scss/uikit";
+
+.uk-button-tidy-menu {
+  background-color: $button-tidy-menu-bacgroung-color;
+  color: $button-tidy-menu-color;
+}
+
+/* Hover */
+.uk-button-tidy-menu:hover,
+.uk-button-tidy-menu:focus {
+    background-color: $button-tidy-menu-hover-background;
+    color: $button-tidy-menu-hover-color;
+}
