--- a/app/views/admin/accounts/index.html.slim
+++ b/app/views/admin/accounts/index.html.slim
@@ -45,7 +45,11 @@ table.uk-table.uk-table-striped
           = link_to 'Unlock', admin_account_path(user, :user => {locked_at: '', failed_attempts: 0}), method: :patch, data: { confirm: 'Are you sure?' }, class: 'uk-button uk-button-danger'
         .uk-modal id="more-#{user.id}"
           .uk-modal-dialog
-            h2= user.email
+            h2
+              ul.uk-subnav
+                li= user.email
+                li= link_to 'Edit', edit_admin_account_path(user), class: 'uk-button'
+                li= link_to 'Destroy', admin_account_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'uk-button uk-button-danger'
             hr
             table.uk-table.uk-table-striped
               tr
@@ -85,6 +89,3 @@ table.uk-table.uk-table-striped
               tr
                 td Remember created at:
                 td= user.remember_created_at
-            ul.uk-subnav
-              li= link_to 'Edit', edit_admin_account_path(user), class: 'uk-button'
-              li= link_to 'Destroy', admin_account_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'uk-button uk-button-danger'
