--- a/app/views/pages/_form.html.slim
+++ b/app/views/pages/_form.html.slim
@@ -10,7 +10,7 @@ div.uk-form-large
     br
     div.uk-form-large
       = f.label :url, "Url: #{@site.url}/ "
-      = f.text_field :url, placeholder: '/about', class: "uk-form-width"
+      = f.text_field :url, placeholder: 'about', class: "uk-form-width"
     br
     div.uk-form-large
       = f.label :title, "Email: "
